--- a/manifests/app-deploy.yaml
+++ b/manifests/app-deploy.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: lms-system-deployment
+  name: tweet-block-deployment
 spec:
-  replicas: 3 # You can adjust the number of replicas as needed
+  replicas: 6 # You can adjust the number of replicas as needed
   selector:
     matchLabels:
-      app: lms-system
+      app: tweet-block
   template:
     metadata:
       labels:
-        app: lms-system
+        app: tweet-block
     spec:
       containers:
-        - name: lms-system
-          image: yash5090/lms-system:latest # Replace with the actual image tag
+        - name: tweet-block
+          image: yash5090/tweet-block:latest # Replace with the actual image tag
           ports:
-            - containerPort: 5000 # Replace with the port your Tetris game listens on
+            - containerPort: 3000 # Replace with the port your Tetris game listens on
