--- a/manifests/app-svc.yaml
+++ b/manifests/app-svc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: lms-system-service
+  name: tweet-block-service
 spec:
   selector:
-    app: lms-system
+    app: tweet-block
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
+      port: 3000
+      targetPort: 3000
   type: LoadBalancer
