--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: pe-wa-deployment
+  name: tweet-block-deployment
 spec:
   replicas: 6  # Number of desired replicas
   selector:
     matchLabels:
-      app: pe-wa
+      app: tweet-block
   template:
     metadata:
       labels:
-        app: pe-wa
+        app: tweet-block
     spec:
       containers:
-      - name: pe-wa
-        image: yash5090/pe-wa:latest
+      - name: tweet-block
+        image: yash5090/tweet-block:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 3000
