--- a/ingress.yaml
+++ b/ingress.yaml
@@ -1,23 +1,23 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: pe-wa-ingress
+  name: tweet-block-ingress
 spec:
   rules:
-  - host: pe-wa
+  - host: tweet-block
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: pe-wa-service
+            name: tweet-block-service
             port:
-              number: 5000 #80
+              number: 3000 #80
       - path: /app
         pathType: Prefix
         backend:
           service:
-            name: pe-wa-service
+            name: tweet-block-service
             port:
-              number: 5000 #80
+              number: 3000 #80
