--- a/job.yaml
+++ b/job.yaml
@@ -1,13 +1,13 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: pe-wa-job
+  name: tweet-block-job
 spec:
   template:
     spec:
       containers:
-      - name: pe-wa-job
-        image: yash5090/pe-wa:latest
+      - name: tweet-block-job
+        image: yash5090/tweet-block:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 3000
       restartPolicy: OnFailure
