--- a/pvc.yaml
+++ b/pvc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: pe-wa-pvc
+  name: tweet-block-pvc
 spec:
   accessModes:
     - ReadWriteOnce
